# Projekt

ProjektNaZal/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake  main.cpp
ProjektNaZal/.cmake/api/v1/reply/: cache-v2-8148777aa3c6e016bbc2.json  cache-v2-c84098b11149154cc9f5.json  cmakeFiles-v1-91eeff9ab144d7010d9d.json  codemodel-v2-05fe366931ecbe5de8a7.json  codemodel-v2-9a7d30b4e94a06aee6aa.json  index-2021-06-12T15-26-58-0288.json  index-2021-06-21T10-42-15-0367.json  target-ProjektNaZal-Debug-75f7d30712fd998b9a37.json  target-ProjektNaZal-Debug-fb07e93ea7a4823bfa90.json
